[gd_scene load_steps=7 format=3 uid="uid://1tvio4vhxf5o"]

[ext_resource type="Script" uid="uid://ig30wonn554n" path="res://Scripts/Levels.gd" id="1_d2m4p"]
[ext_resource type="Texture2D" uid="uid://dsvf0k25rqwiq" path="res://Sprites/BackgroundMenu 2.png" id="2_c3ead"]
[ext_resource type="FontFile" uid="uid://bf1wvyni0slqf" path="res://Fonts/JosefinSans-Bold.ttf" id="3_5etrs"]
[ext_resource type="Theme" uid="uid://bk7syb0d40qhf" path="res://Themes/ButtonLevelTheme.tres" id="4_hcimt"]
[ext_resource type="Script" uid="uid://dqx8534mqybbs" path="res://Scripts/ButtonController.gd" id="5_t75go"]
[ext_resource type="Theme" uid="uid://b3thp4lbcuf47" path="res://Themes/ButtonBack.tres" id="7_c3ead"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d2m4p")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_c3ead")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 400
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 400
theme_override_constants/margin_bottom = 0

[node name="Title" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Title" type="Label" parent="MarginContainer/Title"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("3_5etrs")
theme_override_font_sizes/font_size = 70
text = "Elige un nivel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Levels" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 25
alignment = 1

[node name="Level1" type="Button" parent="MarginContainer/Levels" node_paths=PackedStringArray("target_label")]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_hcimt")
theme_override_font_sizes/font_size = 40
script = ExtResource("5_t75go")
target_label = NodePath("Label")

[node name="Label" type="Label" parent="MarginContainer/Levels/Level1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level2" type="Button" parent="MarginContainer/Levels" node_paths=PackedStringArray("target_label")]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_hcimt")
theme_override_font_sizes/font_size = 40
script = ExtResource("5_t75go")
target_label = NodePath("Label")

[node name="Label" type="Label" parent="MarginContainer/Levels/Level2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level3" type="Button" parent="MarginContainer/Levels" node_paths=PackedStringArray("target_label")]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_hcimt")
theme_override_font_sizes/font_size = 40
script = ExtResource("5_t75go")
target_label = NodePath("Label")

[node name="Label" type="Label" parent="MarginContainer/Levels/Level3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 40
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -90.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/separation = 25

[node name="Back" type="Button" parent="BackButton"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("7_c3ead")
theme_override_font_sizes/font_size = 40

[connection signal="mouse_entered" from="MarginContainer/Levels/Level1" to="MarginContainer/Levels/Level1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/Levels/Level1" to="MarginContainer/Levels/Level1" method="_on_mouse_exited"]
[connection signal="pressed" from="MarginContainer/Levels/Level1" to="." method="_on_level_1_pressed"]
[connection signal="mouse_entered" from="MarginContainer/Levels/Level2" to="MarginContainer/Levels/Level2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/Levels/Level2" to="MarginContainer/Levels/Level2" method="_on_mouse_exited"]
[connection signal="pressed" from="MarginContainer/Levels/Level2" to="." method="_on_level_2_pressed"]
[connection signal="mouse_entered" from="MarginContainer/Levels/Level3" to="MarginContainer/Levels/Level3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/Levels/Level3" to="MarginContainer/Levels/Level3" method="_on_mouse_exited"]
[connection signal="pressed" from="MarginContainer/Levels/Level3" to="." method="_on_level_3_pressed"]
[connection signal="mouse_entered" from="BackButton/Back" to="BackButton/Back" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="BackButton/Back" to="BackButton/Back" method="_on_mouse_exited"]
[connection signal="pressed" from="BackButton/Back" to="." method="_on_back_pressed"]
